speed. Thanks to Alex Krohn for reporting the performance issue. [David and
Josh Berkus]

=item *

Tweaked F<contrib/bric_media_upload/bric_media_upload> so that it uses
C<bric_soap site list_ids> instead of C<bric_soap category list_ids> for setting
the login cookie. That should be more efficient for installations that have many
more categories than they have sites. [Scott]

=back

=head2 Bug Fixes

=over

=item *

Really fix bug 1232 (saving categories with 3 keywords), that was falsely claimed
to have been fixed in 1.10.3. [Scott]

=item *

Fixed bug 1340, where Preview buttons weren't working within Related assets.
[Scott & David]

=item *

Fixed bug 1339, editing User Prefs wasn't working. [Scott]

=item *

The download link in Media Profile wasn't popping up into a new window on some
browsers due to a typo. Spotted by Tatiana Titova. [Scott]

=item *

In the Contributors Manager, sometimes there aren't "New" links, and this was
causing the latest Locale::Maketext indigestion. Spotted by John Watson. [Scott]

=item *

Fix for bug 1344 (spotted by Ed Guzman) and hopefully better fix for bug 1326
(my suggestion wasn't quite right). The handling of E<lt>publish_statusE<gt>
in bric_soap has been a bit dodgy. Also changed publish_status to deploy_status
in C<Bric::SOAP::Template>. [Scott]

=item *

The state for Log lists was getting stuck, so if you go to the 2nd page of the
log for a media, say, every log thereafter was the same. Reported by John
Kirkwood. [Scott]

=item *

Fix both parts of bug 1345, Bulk Edit had problems with blank lines. [Scott]

=item *

Fixed CCS bug which was preventing the jump buttons from displaying in Firefox
and Safari. [Matt Rolf]

=item *

Tweaked Bricolage Instance Name display. [Matt Rolf]

=back

=head1 VERSION 1.10.5 (2008-04-29)

=head2 Improvements

=over

=item *

Added support for the JS-Quicktags WYSIWYG editor. [Greg Heo]

=item *

API doc corrections reported by Rod Taylor. [Scott]

=item *
